@startuml
class User {
  +walletAddress : String
  +name : String
  +email : String
  +role : String
  +createdAt : DateTime
}

class Template {
  +id : String
  +userId : String
  +name : String
  +filePath : String
  +isDeleted : Boolean
  +createdAt : DateTime
}

class Certificate {
  +id : String
  +templateId : String
  +recipientName : String
  +certificateTitle : String
  +issueDate : DateTime
  +expiryDate : DateTime
  +issuerName : String
  +targetAddress : String
  +issuerAddress : String
  +filePath : String
  +ipfsCid : String
  +status : String
  +createdAt : DateTime
}

class IssuerApplication {
  +id : String
  +userId : String
  +name : String
  +email : String
  +reason : String
  +status : String
  +reviewedBy : String
  +reviewedAt : DateTime
  +createdAt : DateTime
}

User "1" -- "many" Template : memiliki
Template "1" -- "many" Certificate : digunakan oleh
User "1" -- "many" Certificate : menerbitkan
User "1" -- "many" Certificate : menerima
User "1" -- "many" IssuerApplication : mengajukan
@enduml 